--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -6,6 +6,7 @@ bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
+resources.frontController.moduleDirectory = APPLICATION_PATH "/models"
 resources.frontController.params.displayExceptions = 0
 baseUrl = "www.webdesignerjun.com"
 
@@ -28,6 +29,7 @@ bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
+resources.frontController.moduleDirectory = APPLICATION_PATH "/models"
 resources.frontController.params.displayExceptions = 0
 baseUrl = "www.webdesignerjun.com"
 
@@ -40,4 +42,5 @@ bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
+resources.frontController.moduleDirectory = APPLICATION_PATH "/models"
 baseUrl = "www.webdesignerjun.com"
