add logic on DB.

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -10,6 +10,13 @@ resources.frontController.moduleDirectory = APPLICATION_PATH "/models"
 resources.frontController.params.displayExceptions = 1
 baseUrl = "www.webdesignerjun.com"
 
+//DB
+resources.db.adapter = "mysqli"
+resources.db.params.host = "localhost"
+resources.db.params.username = "root"
+resources.db.params.password = "root"
+resources.db.params.dbname = "webdesignerjun"
+
 [staging : production]
 phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
@@ -20,6 +27,13 @@ appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 1
 baseUrl = "www.webdesignerjun.com"
+
+//DB
+resources.db.adapter = "mysqli"
+resources.db.params.host = "localhost"
+resources.db.params.username = "root"
+resources.db.params.password = "root"
+resources.db.params.dbname = "webdesignerjun"
 
 [testing : production]
 phpSettings.display_startup_errors = 1
@@ -33,6 +47,13 @@ resources.frontController.moduleDirectory = APPLICATION_PATH "/models"
 resources.frontController.params.displayExceptions = 1
 baseUrl = "www.webdesignerjun.com"
 
+//DB
+resources.db.adapter = "mysqli"
+resources.db.params.host = "localhost"
+resources.db.params.username = "root"
+resources.db.params.password = "root"
+resources.db.params.dbname = "webdesignerjun"
+
 [development : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
@@ -44,3 +65,10 @@ appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.moduleDirectory = APPLICATION_PATH "/models"
 baseUrl = "www.webdesignerjun.com"
+
+//DB
+resources.db.adapter = "mysqli"
+resources.db.params.host = "localhost"
+resources.db.params.username = "root"
+resources.db.params.password = "root"
+resources.db.params.dbname = "webdesignerjun"
