--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -12,10 +12,10 @@ baseUrl = "www.webdesignerjun.com"
 
 //DB
 resources.db.adapter = "mysqli"
-resources.db.params.host = "localhost"
-resources.db.params.username = "root"
-resources.db.params.password = "root"
-resources.db.params.dbname = "webdesignerjun"
+resources.db.params.host = "www.webdesignerjun.com"
+resources.db.params.username = "tweekaboo"
+resources.db.params.password = "tweek*2013"
+resources.db.params.dbname = "live_tweekaboo_com"
 
 [staging : production]
 phpSettings.display_startup_errors = 0
@@ -30,10 +30,10 @@ baseUrl = "www.webdesignerjun.com"
 
 //DB
 resources.db.adapter = "mysqli"
-resources.db.params.host = "localhost"
-resources.db.params.username = "root"
-resources.db.params.password = "root"
-resources.db.params.dbname = "webdesignerjun"
+resources.db.params.host = "www.webdesignerjun.com"
+resources.db.params.username = "tweekaboo"
+resources.db.params.password = "tweek*2013"
+resources.db.params.dbname = "live_tweekaboo_com"
 
 [testing : production]
 phpSettings.display_startup_errors = 1
