update app.ini for db.

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -13,9 +13,9 @@ baseUrl = "www.webdesignerjun.com"
 //DB
 resources.db.adapter = "mysqli"
 resources.db.params.host = "www.webdesignerjun.com"
-resources.db.params.username = "tweekaboo"
-resources.db.params.password = "tweek*2013"
-resources.db.params.dbname = "live_tweekaboo_com"
+resources.db.params.username = "root"
+resources.db.params.password = "Edison6302"
+resources.db.params.dbname = "webdesignerjun"
 
 [staging : production]
 phpSettings.display_startup_errors = 0
@@ -31,9 +31,9 @@ baseUrl = "www.webdesignerjun.com"
 //DB
 resources.db.adapter = "mysqli"
 resources.db.params.host = "www.webdesignerjun.com"
-resources.db.params.username = "tweekaboo"
-resources.db.params.password = "tweek*2013"
-resources.db.params.dbname = "live_tweekaboo_com"
+resources.db.params.username = "root"
+resources.db.params.password = "Edison6302"
+resources.db.params.dbname = "webdesignerjun"
 
 [testing : production]
 phpSettings.display_startup_errors = 1
@@ -49,9 +49,9 @@ baseUrl = "www.webdesignerjun.com"
 
 //DB
 resources.db.adapter = "mysqli"
-resources.db.params.host = "localhost"
+resources.db.params.host = "www.webdesignerjun.com"
 resources.db.params.username = "root"
-resources.db.params.password = "root"
+resources.db.params.password = "Edison6302"
 resources.db.params.dbname = "webdesignerjun"
 
 [development : production]
