--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -12,7 +12,7 @@ baseUrl = "www.webdesignerjun.com"
 
 //DB
 resources.db.adapter = "mysqli"
-resources.db.params.host = "www.webdesignerjun.com"
+resources.db.params.host = "127.0.0.1 "
 resources.db.params.username = "root"
 resources.db.params.password = "Edison6302"
 resources.db.params.dbname = "webdesignerjun"
@@ -30,7 +30,7 @@ baseUrl = "www.webdesignerjun.com"
 
 //DB
 resources.db.adapter = "mysqli"
-resources.db.params.host = "www.webdesignerjun.com"
+resources.db.params.host = "127.0.0.1 "
 resources.db.params.username = "root"
 resources.db.params.password = "Edison6302"
 resources.db.params.dbname = "webdesignerjun"
@@ -49,7 +49,7 @@ baseUrl = "www.webdesignerjun.com"
 
 //DB
 resources.db.adapter = "mysqli"
-resources.db.params.host = "www.webdesignerjun.com"
+resources.db.params.host = "127.0.0.1 "
 resources.db.params.username = "root"
 resources.db.params.password = "Edison6302"
 resources.db.params.dbname = "webdesignerjun"
